src/sass/layout/_full-width.scss
.site {
	margin: 0 auto;
	max-width: $size__site-main;
}

/* Widgets layout */

.widget-area .widget {
	display: inline-block;
	vertical-align: top;
	width: 1/3 * 100%;
	padding: 40px;

	&:nth-of-type(3n+1) {
		padding-left: 0;
	}

	&:nth-of-type(3n) {
		padding-right: 0;
	}
}

